Changed the destination of deploy-to-server.yml

--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -19,7 +19,7 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         source: "."
-        target: "/var/www/housesofcards.brandonodom.com/public_html"
+        target: "/apps/housesofcards/"
 
     - name: SSH Remote Commands
       uses: appleboy/ssh-action@v0.1.4
