Updating deploy-to-server.yml to deploy Node.js app

--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -28,4 +28,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
-        script: echo "New commit deployed successfully"
+        script: |
+          npm install
+          echo "New commit deployed successfully"
+          pm2 restart app.js
