--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -8,10 +8,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
+    - name: Clean Directory
+      uses: appleboy/ssh-action@v0.1.4
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}
+        script: |
+          cd /apps/housesofcards/
+          rm -rf *
+    
+    - name: Checkout Repo
       uses: actions/checkout@v2.3.4
 
-    - name: SCP Command to Transfer Files
+    - name: Transfer Repo to Directory
       uses: appleboy/scp-action@v0.1.1
       with:
         host: ${{ secrets.HOST }}
@@ -21,7 +32,7 @@ jobs:
         source: "."
         target: "/apps/housesofcards/"
 
-    - name: SSH Remote Commands
+    - name: Init and Run App
       uses: appleboy/ssh-action@v0.1.4
       with:
         host: ${{ secrets.HOST }}
